feat: enhance middleware and package management features
- Updated middleware to add a header for admin routes.
- Enhanced package creation and editing forms to support new fields and improved validation.
- Integrated PDF export functionality for package details.
- Refactored UI components for better layout and usability, including the footer and theme toggle.
- Added new dependencies for PDF generation and improved type definitions for package data.
- Cleaned up and optimized various components and utility functions for better performance and maintainability.

--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@react-three/drei": "latest",
     "@react-three/fiber": "latest",
     "@supabase/supabase-js": "latest",
+    "@types/formidable": "^3.4.5",
+    "@types/pdfkit": "^0.13.9",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -52,14 +54,23 @@
     "expo-asset": "latest",
     "expo-file-system": "latest",
     "expo-gl": "latest",
+    "formidable": "^3.5.4",
     "framer-motion": "latest",
+    "html2canvas": "^1.4.1",
     "html2pdf.js": "latest",
     "input-otp": "1.4.1",
     "js-cookie": "latest",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "leaflet": "latest",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "latest",
+    "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.17.1",
+    "pdfkit-table": "^0.1.99",
+    "puppeteer": "^24.8.0",
+    "qrcode": "^1.5.4",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
@@ -79,6 +90,7 @@
   "devDependencies": {
     "@types/leaflet": "^1.9.17",
     "@types/node": "^22",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
