--- a/package.json
+++ b/package.json
@@ -88,11 +88,13 @@
     "zod": "latest"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/leaflet": "^1.9.17",
     "@types/node": "^22",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.176.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
