--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@react-email/components": "^0.0.38",
+    "@react-email/render": "^1.1.0",
     "@react-three/drei": "latest",
     "@react-three/fiber": "latest",
     "@supabase/supabase-js": "latest",
@@ -66,6 +68,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "latest",
+    "nodemailer": "^7.0.2",
     "pdf-lib": "^1.17.1",
     "pdfkit": "^0.17.1",
     "pdfkit-table": "^0.1.99",
@@ -91,6 +94,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/leaflet": "^1.9.17",
     "@types/node": "^22",
+    "@types/nodemailer": "^6.4.17",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
