--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@supabase/supabase-js": "latest",
     "@types/formidable": "^3.4.5",
     "@types/pdfkit": "^0.13.9",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
